# gazebo_plugins

./: README.md
install/: local_setup.sh  setup.sh
install/box_camera/share/ament_index/resource_index/package_run_dependencies/: box_camera
install/box_camera/share/ament_index/resource_index/parent_prefix_path/: box_camera
install/box_camera/share/box_camera/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/box_camera/share/box_camera/cmake/: ament_cmake_export_libraries-extras.cmake  box_cameraConfig.cmake
install/box_camera/share/box_camera/src/: boxCameraPlugin.cpp
install/cam_interface/include/cam_interface/cam_interface/msg/: pixel.h  pixel.hpp
install/cam_interface/include/cam_interface/cam_interface/msg/detail/: pixel__builder.hpp  pixel__functions.c  pixel__functions.h  pixel__rosidl_typesupport_fastrtps_cpp.hpp  pixel__rosidl_typesupport_introspection_c.h  pixel__struct.h  pixel__struct.hpp  pixel__type_support.cpp
install/cam_interface/local/lib/python3.10/dist-packages/cam_interface/: _cam_interface_s.ep.rosidl_typesupport_fastrtps_c.c
install/cam_interface/local/lib/python3.10/dist-packages/cam_interface/msg/: _pixel.py  _pixel_s.c
install/cam_interface/share/ament_index/resource_index/package_run_dependencies/: cam_interface
install/cam_interface/share/cam_interface/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/cam_interface/share/cam_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  cam_interface__rosidl_typesupport_cExport-noconfig.cmake  cam_interface__rosidl_typesupport_cppExport.cmake  cam_interface__rosidl_typesupport_introspection_cExport.cmake  export_cam_interface__rosidl_generator_cExport.cmake  export_cam_interface__rosidl_generator_cppExport.cmake  export_cam_interface__rosidl_generator_pyExport-noconfig.cmake  export_cam_interface__rosidl_generator_pyExport.cmake  export_cam_interface__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
install/cam_interface/share/cam_interface/msg/: Pixel.idl
log/: latest_build
model_code/: example.cpp
src/box_camera/: CMakeLists.txt
src/box_camera/include/boxCamera/: boxCameraPlugin.hpp
src/box_camera/models/box/: model.config  model.sdf
src/box_camera/src/: boxCameraPlugin.cpp
src/cam_interface/: CMakeLists.txt
src/cam_interface/msg/: Pixel.msg
